Added the background image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- <img class="pattern" src="images\pattern-background-desktop.svg" alt="" /> -->
       <div class="card">
         <div class="header-image">
           <img
